# ac_nnet

./: README.md  configure.ac
ac_tools/: Makefile.am  configure.ac
ac_tools/include/: matrix.h
ac_tools/src/cmd/: Makefile.am  Makefile.in  ac_linreg.c  matrix_tester.c  simple_regression.c
ac_tools/src/lib/: Makefile.am  matrix.c
include/: config.h.in
sphinxbase/: BUILD
src/cmd/: Makefile  Makefile.am  Makefile.am~  ac_linreg.c~
src/lib/: Makefile.am  svmread.c
